# poc-http-json-crud-postgres

./: Cargo.toml  README.md  rust-toolchain.toml
diagrams/: actors.excalidraw
nodejs-equivalent/: main.mts  package-lock.json  package.json
src/: db.rs  logg.rs  main.rs  term.rs
src/db/: mod.rs  schema.rs  schema_v1.rs
src/web/: db_client.rs  mod.rs
src/web/handlers/: books_v1.rs  get_foos.rs  mod.rs
